--- a/styles.css
+++ b/styles.css
@@ -464,6 +464,7 @@ input[type="text"] {
     .hero {
         flex-direction: column;
         padding-top: 100px;
+        padding: 100px 0px 0px 0px;
         text-align: center;
     }
     .features {
