--- a/styles.css
+++ b/styles.css
@@ -59,10 +59,16 @@ button {
 }
 
 .create-account {
+    padding: .5rem 1rem;
     background-color: rgb(35, 199, 236);
     color: white;
+    text-decoration: none;
+    border-radius: 4px;
+    transition: background-color .3s;
 }
-
+.create-account:hover {
+    background-color: rgb(26, 173, 206);
+}
 .banner-bg {
     background: url('bg.png');
     background-size: cover;
@@ -102,7 +108,12 @@ input[type="text"] {
     padding: 1rem 1.5rem;
     background-color: rgb(35, 199, 236);
     color: white;
+    text-decoration: none;
     border-radius: 4px;
+    transition: background-color 0.3s;
+}
+.search-btn:hover {
+    background-color: rgb(26, 173, 206);
 }
 
 .cta-buttons {
