add responsive design

--- a/styles.css
+++ b/styles.css
@@ -472,6 +472,9 @@ input[type="text"] {
 
 
 @media only screen and (max-width: 900px) {
+    .mini {
+        flex-direction: column;
+    }
     .hero {
         flex-direction: column;
         padding-top: 100px;
